css/home: fix alignment issue on mobile

--- a/css/home.scss
+++ b/css/home.scss
@@ -73,8 +73,6 @@
 }
 
 .hero-text {
-	padding: 1rem;
-	
 	h2 {
 		font-weight: 600;
 	}
